<resources>
    <string name="app_name">HLC02_EnriqueFernadez</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="menu_main_login">Login</string>
    <string name="menu_main_acercade">Acerca De...</string>

    <string name="dialog_datos_colegio">I.E.S Al-Ándalus\n2º DAM - Horas de Libre Configuración\nProfesor: Juan Pedro Martinez</string>
    <string name="nombre_autor">Enrique Octavio Fernández Chacón</string>

    <string name="mainactivity_titulo">HOTELES DE ALMERIA</string>

    <string name="hotel_barcelo">BARCELÓ CABO DE GATA</string>
    <string name="hotel_gran">GRAN HOTEL ALMERÍA</string>
    <string name="hotel_elba">HOTEL ELBA ALMERÍA</string>

    <string name="boton_mas_informacion">SOLICITAR INFORMACION\n PARA RESERVAR</string>

    <string name="telefono1">950123456</string>
    <string name="telefono2">950123457</string>
    <string name="telefono3">950123458</string>

    <string name="latitud1">36.838468518455876</string>
    <string name="latitud2">36.834869660154624</string>
    <string name="latitud3">36.85564725821251</string>
    <string name="longitud1">-2.3234859731290864</string>
    <string name="longitud2">-2.4635306221976685</string>
    <string name="longitud3">-2.4455958019647106</string>

    <string name="sonido1">sonido_barcelo</string>
    <string name="sonido2">sonido_gran_hotel</string>
    <string name="sonido3">sonido_elba</string>

    <string name="fotoHotel1">barcelo</string>
    <string name="fotoHotel2">gran_hotel</string>
    <string name="fotoHotel3">elba</string>

    <string name="video_hotel_gran_hotel">fpX3OQGt6Mg</string>
    <string name="video_hotel_elba">bWSYgzfWd8U</string>
    <string name="video_hotel_barcelo">8aG3iDXFB4w</string>

    <string name="reserva_hint_nombre">Nombre</string>
    <string name="reserva_hint_apellidos">Apellidos</string>
    <string name="reserva_hint_email">Email</string>
    <string name="reserva_hint_fecha">Fecha de la reserva</string>
    <string name="reserva_hint_dias">Dias de estancia</string>
    <string name="reserva_hint_mascota">Mascotas</string>
    <string name="reserva_hint_consulta">Introduzca aquí su consulta...</string>
    <string name="reserva_info">Formulario para solicitar información de una reserva</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="boton_enviar">ENVIAR</string>

    <string name="descripcion_foto_hotel">Foto del hotel</string>
    <string name="descripcion_icono_estudio">Esto e sun trabajo de clase</string>
</resources>
